# peer

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README  TODO  array_helper.cpp  array_helper.h  bayesnet.cpp  bayesnet.h  main.cpp  main_testing.cpp  model.cpp  model.h  ossolog.h  peer.1  sim.cpp  sim.h  sparsefa.cpp  sparsefa.h  tests.cpp  vbfa.cpp  vbfa.h  vbfa.py
R/: CMakeLists.txt  Makefile  Makevars  lib  peer.R  peer.i  peer_wrap.cpp
R/peer/: DESCRIPTION
R/peer/R/: R_SWIG_addCallbackFunctionStack.R  R_SWIG_getCallbackFunctionStack.R  SWIG_createNewRef.R  VBFA.R  VBFA_Alpha_get.R  VBFA_Alpha_set.R  VBFA_Eps_get.R  VBFA_Eps_set.R  VBFA_W_get.R  VBFA_W_set.R  VBFA_X_get.R  VBFA_X_set.R  VBFA_calcBound.R  VBFA_getAdd_mean.R  VBFA_getAlpha.R  VBFA_getCovariates.R  VBFA_getEps.R  VBFA_getNc.R  VBFA_getNj.R  VBFA_getNk.R  VBFA_getNmax_iterations.R  VBFA_getNp.R  VBFA_getPhenoMean.R  VBFA_getPhenoVar.R  VBFA_getResiduals.R  VBFA_getTolerance.R  VBFA_getW.R  VBFA_getX.R  VBFA_init_net.R  VBFA_logprob.R  VBFA_pheno_get.R  VBFA_pheno_set.R  VBFA_setAdd_mean.R  VBFA_setCovariates.R  VBFA_setNk.R  VBFA_setNmax_iterations.R  VBFA_setPhenoMean.R  VBFA_setPhenoVar.R  VBFA_setPriorAlpha.R  VBFA_setPriorEps.R  (+67 more)
R/peer/man/: PEER.Rd  PEER_getAdd_mean.Rd  PEER_getBounds.Rd  PEER_getCovariates.Rd  PEER_getNj.Rd  PEER_getPhenoMean.Rd  PEER_getPriorAlphaB.Rd  PEER_getPriorEpsB.Rd  PEER_getResidualVars.Rd  PEER_getSigmaOff.Rd  PEER_getVarTolerance.Rd  PEER_getW.Rd  PEER_getX.Rd  PEER_init_net_sparse.Rd  PEER_logprob.Rd  PEER_setNk.Rd  PEER_setNmax_iterations.Rd  PEER_setPhenoVar.Rd  PEER_setPriorAlpha.Rd  PEER_setPriorAlphaB.Rd  PEER_setPriorEps.Rd  PEER_setSparsityPrior.Rd  PEER_setTolerance.Rd  PEER_setVarTolerance.Rd  R_SWIG_addCallbackFunctionStack.Rd  R_SWIG_getCallbackFunctionStack.Rd  SWIG_createNewRef.Rd  VBFA.Rd  VBFA_Alpha_get.Rd  VBFA_Alpha_set.Rd  VBFA_Eps_get.Rd  VBFA_Eps_set.Rd  VBFA_W_get.Rd  VBFA_W_set.Rd  VBFA_X_get.Rd  VBFA_X_set.Rd  VBFA_calcBound.Rd  VBFA_getAdd_mean.Rd  VBFA_getAlpha.Rd  VBFA_getCovariates.Rd  (+90 more)
R/peer/src/: Makevars
cmake/: FindNumpy.cmake  FindPythonLibsDist.cmake  FindR.cmake
cran/: create_source_package.sh  install_package.sh  update_swig.sh
cran/peer/: NAMESPACE
cran/peer/R/: peer.R
cran/peer/man/: PEER_calcBound.Rd  PEER_getAlpha.Rd  PEER_getEps.Rd  PEER_getNc.Rd  PEER_getNk.Rd  PEER_getNmax_iterations.Rd  PEER_getNp.Rd  PEER_getPhenoVar.Rd  PEER_getPriorAlphaA.Rd  PEER_getPriorEpsA.Rd  PEER_getResiduals.Rd  PEER_getSparsityPrior.Rd  PEER_getTolerance.Rd  PEER_getZ.Rd  PEER_init_net.Rd  PEER_setAdd_mean.Rd  PEER_setCovariates.Rd  PEER_setPhenoMean.Rd  PEER_setPriorAlphaA.Rd  PEER_setPriorEpsA.Rd  PEER_setPriorEpsB.Rd  PEER_setSigmaOff.Rd  PEER_update.Rd
cran/peer/src/: Eigen  Makevars  alglibinternal.cpp  alglibinternal.h  alglibmisc.cpp  alglibmisc.h  ap.cpp  ap.h  array_helper.cpp  array_helper.h  bayesnet.cpp  bayesnet.h  csv_parser  dataanalysis.cpp  dataanalysis.h  diffequations.cpp  diffequations.h  fasttransforms.cpp  fasttransforms.h  integration.cpp  integration.h  interpolation.cpp  interpolation.h  io.cpp  io.h  linalg.cpp  linalg.h  main.cpp  optimization.cpp  optimization.h  ossolog.h  peerR_wrap.cpp  sim.cpp  sim.h  solvers.cpp  solvers.h  sparsefa.cpp  sparsefa.h  specialfunctions.cpp  specialfunctions.h  (+7 more)
cran/peer_template/R/: firstlib.R
cran/peer_template/src/: Makevars
doc/: tutorial_cmdline.txt
examples/: README.txt  brem_exploration.R  expression.csv  expression_sparse.csv  groundtruth_sparse.csv  helpers.R  paper_plots.R  plot.R  prior_sparse.csv  python_demo.py  python_demo2.py  r_demo.R  r_demo_sparse.R  simulate_expression.py  standalone_demo.sh  standalone_demo2.sh  tutorial_cmdline.txt
examples/R/: brem_eqtl.R
examples/brem_data/: expression.csv  genotype.csv  yeastract_expr.csv
examples/data/: ._brem_expr.csv  ._brem_genotype.csv  ._brem_yeastract_expr.csv  ._brem_yeastract_prior.csv  ._covs.csv  ._expression.csv  ._expression_sparse.csv  ._genotypes.csv  ._groundtruth_sparse.csv  ._prior_sparse.csv  ._simulate_expression.py  brem_yeastract_prior.csv  covs.csv  expression.csv  expression_sparse.csv  groundtruth_sparse.csv  prior_sparse.csv
include/: array_helper.h  bayesnet.h  io.h  main_testing.h  model.h  ossolog.h  peerutil.h  sim.h  sparsefa.h  sparsefa.i  vbfa.h
peer.xcodeproj/: lp2.mode1v3  lp2.pbxuser  mz2.mode1v3  mz2.pbxuser  project.pbxproj
python/: CMakeLists.txt  Makefile  get_numpy_include.py  lib  peer.i  python_demo.py  setup.py
src/: CMakeLists.txt  array_helper.cpp  bayesnet.cpp  io.cpp  main.cpp  main_testing.cpp  peerutil.cpp  peerutil_main.cpp  sim.cpp  sparsefa.cpp  tests.cpp  vbfa.cpp
